--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Create By || Mohmed Mahmoud Fouad",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://bazar-react.vercel.app/assets/images/logo2.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "https://bazar-react.vercel.app/assets/images/logo2.svg",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "https://bazar-react.vercel.app/assets/images/logo2.svg",
       "type": "image/png",
       "sizes": "512x512"
     }
