--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create By || Mohmed Mahmoud Fouad",
+  "short_name": "bazar",
+  "name": "Mohmed Mahmoud Fouad",
   "icons": [
     {
       "src": "https://bazar-react.vercel.app/assets/images/logo2.svg",
